Add:Smile_to_Transformer

--- a/CNN/cnn.ipynb
+++ b/CNN/cnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "((70000, 784), (70000,))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -107,17 +107,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(70000, 28, 28)"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X, y = np.array(mnist.data), np.array(mnist.target) \n",
-    "y = y.astype(int)"
+    "y = y.astype(int)\n",
+    "X_reshaped = []\n",
+    "\n",
+    "for i in range(len(X)):\n",
+    "    X_reshaped.append(X[i].reshape(28, 28))\n",
+    "\n",
+    "# X_reshaped는 이제 2차원 이미지 데이터를 포함하는 리스트입니다.\n",
+    "X_reshaped = np.array(X_reshaped)\n",
+    "X_reshaped.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +162,7 @@
        "784"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,22 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_reshaped = []\n",
-    "\n",
-    "for i in range(len(X)):\n",
-    "    X_reshaped.append(X[i].reshape(28, 28))\n",
-    "\n",
-    "# X_reshaped는 이제 2차원 이미지 데이터를 포함하는 리스트입니다.\n",
-    "X_reshaped = np.array(X_reshaped)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,171 +227,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Relu:\n",
-    "    def __init__(self):\n",
-    "        self.input = np.array([])\n",
-    "    def forward(self, input):\n",
-    "        self.input = input\n",
-    "        self.output = np.maximum(0, input)\n",
-    "        return self.output\n",
+    "    def forward(self, inputs):\n",
+    "        self.inputs = inputs\n",
+    "        return np.maximum(0, inputs)\n",
     "\n",
     "    def backward(self, output_gradient):\n",
-    "        self.input_gradient = (self.input > 0) * output_gradient\n",
-    "        return self.input_gradient"
+    "        return output_gradient * (self.inputs > 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class cnn:\n",
-    "    def __init__(self, X, y, num_filters):\n",
-    "        self.num_filters = num_filters\n",
-    "        self.X = X\n",
-    "        self.y = y\n",
-    "        self.filter = Filter(3, num_filters)\n",
-    "        self.relu_1 = Relu()\n",
-    "        self.relu_2 = Relu()\n",
-    "        \n",
-    "    \n",
-    "    def conv(self, image):\n",
-    "        pass\n",
-    "    \n",
-    "    def max_pooling(self, image):\n",
-    "        pass\n",
+    "class Softmax:\n",
+    "    def forward(self, inputs):\n",
+    "        exp_values = np.exp(inputs - np.max(inputs, axis=1, keepdims=True))\n",
+    "        probabilities = exp_values / np.sum(exp_values, axis=1, keepdims=True)\n",
+    "        return probabilities\n",
     "\n",
-    "    def forward(self, image):\n",
-    "        pass\n"
+    "    def backward(self, output_gradient):\n",
+    "        return output_gradient  # Backpropagation for Softmax combined with Cross-Entropy is handled differently in practice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CNN:\n",
-    "    def __init__(self, X, y, num_filters):\n",
-    "        self.num_filters = num_filters\n",
-    "        self.X = X\n",
-    "        self.y = y\n",
-    "        self.filter = Filter(3, num_filters)\n",
-    "        self.relu_1 = Relu()\n",
-    "        self.relu_2 = Relu()\n",
-    "    \n",
-    "    def conv(self, image):\n",
-    "        return self.filter.forward(image)\n",
+    "class CrossEntropyLoss:\n",
+    "    def forward(self, predictions, labels):\n",
+    "        self.predictions = predictions\n",
+    "        self.labels = labels\n",
+    "        return -np.mean(np.log(predictions[range(len(predictions)), labels]))\n",
     "\n",
-    "    def max_pooling(self, image, pool_size=2, stride=2):\n",
-    "        height, width, depth = image.shape\n",
-    "        output_height = (height - pool_size) // stride + 1\n",
-    "        output_width = (width - pool_size) // stride + 1\n",
-    "        pooled = np.zeros((output_height, output_width, depth))\n",
-    "\n",
-    "        for i in range(0, height - pool_size + 1, stride):\n",
-    "            for j in range(0, width - pool_size + 1, stride):\n",
-    "                region = image[i:i + pool_size, j:j + pool_size]\n",
-    "                pooled[i // stride, j // stride] = np.max(region, axis=(0, 1))\n",
-    "\n",
-    "        return pooled\n",
-    "\n",
-    "    def forward(self, image):\n",
-    "        # 첫 번째 합성곱\n",
-    "        conv_output = self.conv(image)\n",
-    "        relu_output = self.relu_1.forward(conv_output)\n",
-    "        \n",
-    "        # 최대 풀링\n",
-    "        pooled_output = self.max_pooling(relu_output)\n",
-    "        \n",
-    "        # 두 번째 ReLU\n",
-    "        relu_output_2 = self.relu_2.forward(pooled_output)\n",
-    "\n",
-    "        return relu_output_2"
+    "    def backward(self):\n",
+    "        n = len(self.predictions)\n",
+    "        grad = self.predictions\n",
+    "        grad[range(n), self.labels] -= 1\n",
+    "        return grad / n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(49, 391, 8)\n",
-      "Final output:\n",
-      " [[[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]]\n"
+     "ename": "ValueError",
+     "evalue": "maximum supported dimension for an ndarray is 32, found 33",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[139], line 51\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# Assuming X_reshaped is of shape (batch_size, 28, 28) and y is the corresponding labels\u001b[39;00m\n\u001b[1;32m     50\u001b[0m cnn_model \u001b[38;5;241m=\u001b[39m CNN(num_filters\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m)\n\u001b[0;32m---> 51\u001b[0m X_reshaped \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mexpand_dims(X_reshaped, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Forward pass for a batch of data\u001b[39;00m\n\u001b[1;32m     53\u001b[0m output, loss \u001b[38;5;241m=\u001b[39m cnn_model\u001b[38;5;241m.\u001b[39mforward(X_reshaped, y)\n",
+      "File \u001b[0;32m/data/2_data_server/cv-07/anaconda3/envs/koreatech/lib/python3.12/site-packages/numpy/lib/shape_base.py:602\u001b[0m, in \u001b[0;36mexpand_dims\u001b[0;34m(a, axis)\u001b[0m\n\u001b[1;32m    599\u001b[0m shape_it \u001b[38;5;241m=\u001b[39m \u001b[38;5;28miter\u001b[39m(a\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m    600\u001b[0m shape \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m ax \u001b[38;5;129;01min\u001b[39;00m axis \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mnext\u001b[39m(shape_it) \u001b[38;5;28;01mfor\u001b[39;00m ax \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(out_ndim)]\n\u001b[0;32m--> 602\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m a\u001b[38;5;241m.\u001b[39mreshape(shape)\n",
+      "\u001b[0;31mValueError\u001b[0m: maximum supported dimension for an ndarray is 32, found 33"
      ]
     }
    ],
    "source": [
-    "cnn_model = CNN(X[0:100], y[0:100], num_filters=8)\n",
-    "output = cnn_model.forward(X[0:100])\n",
-    "print(output.shape)\n",
-    "# for i in range(len(output[0])):\n",
-    "#     if(output[i] != 0):\n",
-    "#         print(\"Output:\\n\", output[i])\n",
-    "#         break\n",
-    "print(\"Final output:\\n\", output)"
+    "class CNN:\n",
+    "    def __init__(self, num_filters):\n",
+    "        self.num_filters = num_filters\n",
+    "        self.filter = Filter(3, num_filters)\n",
+    "        self.relu = Relu()\n",
+    "        self.softmax = Softmax()\n",
+    "        self.loss = CrossEntropyLoss()\n",
+    "    \n",
+    "    def conv(self, images):\n",
+    "        return self.filter.forward(images)\n",
+    "\n",
+    "    def max_pooling(self, image, pool_size=2, stride=2):\n",
+    "        batch_size, height, width, depth = image.shape\n",
+    "        output_height = (height - pool_size) // stride + 1\n",
+    "        output_width = (width - pool_size) // stride + 1\n",
+    "        pooled = np.zeros((batch_size, output_height, output_width, depth))\n",
+    "\n",
+    "        for i in range(0, height - pool_size + 1, stride):\n",
+    "            for j in range(0, width - pool_size + 1, stride):\n",
+    "                region = image[:, i:i + pool_size, j:j + pool_size, :]\n",
+    "                pooled[:, i // stride, j // stride, :] = np.max(region, axis=(1, 2))\n",
+    "\n",
+    "        return pooled\n",
+    "\n",
+    "    def forward(self, images, labels=None):\n",
+    "        conv_output = self.conv(images)\n",
+    "        relu_output = self.relu.forward(conv_output)\n",
+    "        pooled_output = self.max_pooling(relu_output)\n",
+    "        \n",
+    "        # Flatten the output for fully connected layers (if necessary)\n",
+    "        flattened_output = pooled_output.reshape(pooled_output.shape[0], -1)\n",
+    "        \n",
+    "        # Here, you would typically have a fully connected layer before the softmax.\n",
+    "        # For simplicity, let's assume this CNN directly goes to the softmax.\n",
+    "        \n",
+    "        softmax_output = self.softmax.forward(flattened_output)\n",
+    "\n",
+    "        if labels is not None:\n",
+    "            loss = self.loss.forward(softmax_output, labels)\n",
+    "            return softmax_output, loss\n",
+    "        else:\n",
+    "            return softmax_output\n",
+    "\n",
+    "    def backward(self, learning_rate):\n",
+    "        gradient = self.loss.backward()\n",
+    "        gradient = self.filter.backward(gradient, learning_rate)\n",
+    "        return gradient\n",
+    "\n",
+    "# Assuming X_reshaped is of shape (batch_size, 28, 28) and y is the corresponding labels\n",
+    "cnn_model = CNN(num_filters=8)\n",
+    "X_reshaped = np.expand_dims(X_reshaped, axis=-1)\n",
+    "# Forward pass for a batch of data\n",
+    "output, loss = cnn_model.forward(X_reshaped, y)\n",
+    "\n",
+    "print(\"Output shape:\", output.shape)\n",
+    "print(\"Final output:\\n\", output)\n",
+    "print(\"Loss:\", loss)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class cnn:\n",
+    "#     def __init__(self, X, y, num_filters):\n",
+    "#         self.num_filters = num_filters\n",
+    "#         self.X = X\n",
+    "#         self.y = y\n",
+    "#         self.filter = Filter(3, num_filters)\n",
+    "#         self.relu_1 = Relu()\n",
+    "#         self.relu_2 = Relu()\n",
+    "        \n",
+    "    \n",
+    "#     def conv(self, image):\n",
+    "#         pass\n",
+    "    \n",
+    "#     def max_pooling(self, image):\n",
+    "#         pass\n",
+    "\n",
+    "#     def forward(self, image):\n",
+    "#         pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[96], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m cnn_model \u001b[38;5;241m=\u001b[39m CNN(num_filters\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m output \u001b[38;5;241m=\u001b[39m cnn_model\u001b[38;5;241m.\u001b[39mforward(X_reshaped, y)\n",
+      "Cell \u001b[0;32mIn[71], line 26\u001b[0m, in \u001b[0;36mCNN.forward\u001b[0;34m(self, images, labels)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, images, labels):\n\u001b[0;32m---> 26\u001b[0m     conv_output \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconv(images)\n\u001b[1;32m     27\u001b[0m     relu_output \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrelu\u001b[38;5;241m.\u001b[39mforward(conv_output)\n\u001b[1;32m     28\u001b[0m     pooled_output \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_pooling(relu_output)\n",
+      "Cell \u001b[0;32mIn[71], line 10\u001b[0m, in \u001b[0;36mCNN.conv\u001b[0;34m(self, images)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconv\u001b[39m(\u001b[38;5;28mself\u001b[39m, images):\n\u001b[0;32m---> 10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfilter\u001b[38;5;241m.\u001b[39mforward(images)\n",
+      "Cell \u001b[0;32mIn[67], line 11\u001b[0m, in \u001b[0;36mFilter.forward\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, inputs):\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minputs \u001b[38;5;241m=\u001b[39m inputs\n\u001b[0;32m---> 11\u001b[0m     height, width \u001b[38;5;241m=\u001b[39m inputs\u001b[38;5;241m.\u001b[39mshape\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moutput \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((height \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, width \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msize \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_filters))\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moutput\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]):\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "cnn_model = CNN(num_filters=8)\n",
+    "output = cnn_model.forward(X_reshaped, y)\n",
+    "\n",
+    "# print(output.shape)\n",
+    "# print(\"Final output:\\n\", output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
